# claude-code-proxy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_CN.md  README_EN.md  deny.toml
.github/workflows/: ci.yml
benches/: proxy_bench.rs
docs/: ALL_PHASES_COMPLETE.md  COMPLETE.md  DEBUGGING_THOUGHT_SIGNATURE.md  DEPLOYMENT.md  FINAL_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  KIMI_LOGGING.md  LEARNINGS_FROM_KIMI.md  PHASE_3_4_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_FINAL.md  QUICKSTART.md  TOOL_CALLING_COMPLETE.md  TOOL_CALLING_GUIDE.md
examples/: simple_transform.rs  streaming_demo.rs
specs/: 0001-spec.md  0002-design-spec.md  0003-plan.md  0004-axum-redesign.md  0005-tool-use.md  0006-smart-todo.md  instructions.md
src/: cache.rs  config.rs  error.rs  handler.rs  lib.rs  main.rs  metrics.rs  provider.rs  proxy.rs  state.rs  validation.rs
src/client/: gemini.rs  kimi.rs  mod.rs
src/models/: claude.rs  gemini.rs  mod.rs
src/streaming/: content.rs  mod.rs  parser.rs  sse.rs
src/transform/: mod.rs  request.rs  tools.rs  validation.rs
tests/: e2e_tool_calling.rs  error_handling.rs  request_transform.rs  response_transform.rs  roundtrip.rs  tool_calling.rs
tests/fixtures/: claude_request_blocks.json  claude_request_simple.json  claude_request_with_system.json  gemini_error_response.json  gemini_response_stream.json
