[package]
name = "claude-code-proxy"
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0.100"
pingora = { version = "0.6.0", features = ["cache", "lb", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
