[package]
name = "claude-code-proxy"
version = "0.2.1"
authors = ["Tyr Chen <tyrchen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/tyrchen/claude-code-proxy"
homepage = "https://github.com/tyrchen/claude-code-proxy"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["claude", "gemini", "proxy", "tool calling", "streaming"]

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.7"
axum = "0.8"
bytes = "1.11"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
futures = "0.3"
lazy_static = "1.5"
reqwest = { version = "0.12", features = [
  "stream",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.7"
